add: scalar attention update

--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -15,33 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 2.40355304 -0.66996238  1.89421245]\n",
-      " [ 7.64042136 -1.92736712  5.0570968 ]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([[ 6.69904830e-02, -9.31449150e-01],\n",
-       "        [ 1.56768043e-26, -2.24831539e-25]]),\n",
-       " array([[-7.30964179e-01, -5.32471819e-01],\n",
-       "        [-1.17104623e-25, -8.46764949e-26]]),\n",
-       " array([[ 1.27416367,  3.89954714],\n",
-       "        [ 4.55091222, 11.70034358]]))"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.special import softmax\n",
@@ -105,7 +81,7 @@
     "        # gradient of values input pre latent space transformation\n",
     "        g_V = g_lV @ self.w_V.T \n",
     "        # gradient of latent space transformation\n",
-    "        self.g_w_lV = self.V.T @ g_lV\n",
+    "        self.g_w_V = self.V.T @ g_lV\n",
     "\n",
     "        # gradient of similarity scores, pre softmax \n",
     "\n",
@@ -137,9 +113,14 @@
     "        # gradients of latent space transformations\n",
     "        self.g_w_Q = self.Q.T @ g_lQ\n",
     "        self.g_w_K = self.K.T @ g_lK\n",
-    "\n",
+    "        \n",
     "        return (g_Q, g_K, g_V)\n",
-    "\n"
+    "\n",
+    "    # update weights using function fun and learning rate rate\n",
+    "    def update(self, func, rate):\n",
+    "        self.w_Q = func(self.w_Q, self.g_w_Q, rate)\n",
+    "        self.w_K = func(self.w_K, self.g_w_K, rate)\n",
+    "        self.w_V = func(self.w_V, self.g_w_V, rate)"
    ]
   }
  ],
